--- a/eshop_contact/templates/eshop_contact/contact_done.html
+++ b/eshop_contact/templates/eshop_contact/contact_done.html
@@ -1,1 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}با موفقیت ثبت گردید{% endblock title %}
+
+{% block content %}
 <h3 align='center'>با موفقیت ثبت گردید</h3>
+<a href="/"><button>بازگشت به صفحه ی اصلی</button></a>
+{% endblock content %}
