--- a/eshop_accounts/templates/registration/register.html
+++ b/eshop_accounts/templates/registration/register.html
@@ -1,5 +1,11 @@
+{% extends 'base.html' %}
+
+{% block title %}ثبت نام{% endblock title %}
+
+{% block content %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">ثبت نام</button>
 </form>
+{% endblock content %}
