--- a/eshop_blog/templates/eshop_blog/article_detail.html
+++ b/eshop_blog/templates/eshop_blog/article_detail.html
@@ -1,9 +1,22 @@
+{% extends 'base.html' %} 
+
+{% block title %}{{ article.title }}{% endblock title %}
+
+{% block content %}
 <h1>{{ article.title }}</h1>
 {% if article.photo %}
-<img src="{{ article.photo.url }}" alt="{{ article.title }}">
+<img src="{{ article.photo.url }}" alt="{{ article.title }}" />
 {% endif %}
 <h4>{{ article.subject }}</h4>
 <h6>{{ article.description }}</h6>
 <h6>{{ article.created }}</h6>
-<p> نویسنده :  {% if article.get_author_fullname %}{{ article.get_author_fullname }}{% else %}{{ article.author }}</p>{% endif %}</p>
+<p>
+    نویسنده :
+    {% if article.get_author_fullname %}
+    {{ article.get_author_fullname}}
+    {% else %}
+    {{ article.author }}
+    {% endif %}
+</p>
 <p>{{ object.text }}</p>
+{% endblock content %}
