--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'shared/base.html' %}
+{% extends 'base.html' %}
 {% block title %}صفحه ی اصلی{% endblock title %}
 {% block content %}
 {% if settings.logo %}
